--- a/WorkflowUtilities/ParcelEditHelpers/AddIn_ParcelEditHelpers/SourceCode/ParcelEditHelpers/ParcelEditHelper.csproj
+++ b/WorkflowUtilities/ParcelEditHelpers/AddIn_ParcelEditHelpers/SourceCode/ParcelEditHelpers/ParcelEditHelper.csproj
@@ -110,6 +110,7 @@
     <Compile Include="AdjSettings.cs" />
     <Compile Include="AdjustmentExt.cs" />
     <Compile Include="BreaklineAddNewLines.cs" />
+    <Compile Include="ClothoidSpiral.cs" />
     <Compile Include="Config.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Config.esriaddinx</DependentUpon>
@@ -128,6 +129,12 @@
     <Compile Include="dlgAdjustmentResults.Designer.cs">
       <DependentUpon>dlgAdjustmentResults.cs</DependentUpon>
     </Compile>
+    <Compile Include="dlgSpiralParameters.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="dlgSpiralParameters.Designer.cs">
+      <DependentUpon>dlgSpiralParameters.cs</DependentUpon>
+    </Compile>
     <Compile Include="dlgTraverseResults.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -143,6 +150,7 @@
       <DependentUpon>dlgParcEditHelperOptions.cs</DependentUpon>
     </Compile>
     <Compile Include="LoadFileToLinesGrid.cs" />
+    <Compile Include="PanTo.cs" />
     <Compile Include="ParcelConstruction.cs" />
     <Compile Include="ParcelConstruction.Designer.cs">
       <DependentUpon>ParcelConstruction.cs</DependentUpon>
@@ -256,6 +264,9 @@
     <EmbeddedResource Include="dlgParcEditHelperOptions.resx">
       <DependentUpon>dlgParcEditHelperOptions.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="dlgSpiralParameters.resx">
+      <DependentUpon>dlgSpiralParameters.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="dlgTraverseResults.resx">
       <DependentUpon>dlgTraverseResults.cs</DependentUpon>
     </EmbeddedResource>
@@ -303,6 +314,8 @@
     <AddInContent Include="Images\ParcelConstruction.cur" />
     <AddInContent Include="Images\ParcelConstruction_1.png" />
     <AddInContent Include="Images\ParcelConstruction_1.cur" />
+    <AddInContent Include="Images\PanTo.png" />
+    <AddInContent Include="Images\ClothoidSpiral.png" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Help\Help_files\themedata.thmx">
