Updates for the project information and configuration file for version 1.2
BUG-000110366. Updates for the project information and configuration
file for version 1.2

--- a/WorkflowUtilities/FabricPointMoveToFeature/Addin_FabricPointMoveToFeature/SourceCode/FabricPointMoveToFeature/FabricPointMoveToFeature.csproj
+++ b/WorkflowUtilities/FabricPointMoveToFeature/Addin_FabricPointMoveToFeature/SourceCode/FabricPointMoveToFeature/FabricPointMoveToFeature.csproj
@@ -78,6 +78,7 @@
     <Reference Include="ESRI.ArcGIS.Editor, Version=10.4.0.0, Culture=neutral, PublicKeyToken=8fc3cc631e44ad86, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <EmbedInteropTypes>False</EmbedInteropTypes>
+      <Private>False</Private>
     </Reference>
     <Reference Include="ESRI.ArcGIS.Framework">
       <Private>False</Private>
@@ -114,6 +115,7 @@
       <SpecificVersion>False</SpecificVersion>
       <EmbedInteropTypes>False</EmbedInteropTypes>
       <HintPath>..\..\..\Program Files (x86)\ArcGIS\DeveloperKit10.4\DotNet\ESRI.ArcGIS.System.dll</HintPath>
+      <Private>False</Private>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
